org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Property/Property_no_call_result_in_setter_001/001_PropertyTest.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */

using kermeta::standard

package test {
	class Main
	{
		attribute myA : A
		
		property derived : A
		setter is do
			result:=myA
		end	
		getter is do
		end
		
		
	}
	
	class A {
	}
}

